fix(frontend): login page on small screens
prevent logo from getting huge

--- a/frontend/src/components/login/Login.css
+++ b/frontend/src/components/login/Login.css
@@ -1,11 +1,15 @@
-@media all and (min-width: 480px) {
-  .Login form {
-    margin: 0 auto;
-    max-width: 320px;
-  }
+.Login img {
+  width: 100%;
+  margin-bottom: 20px;
+}
+.Login {
+  max-width: 330px;
+  padding: 15px;
+  margin: 0 auto;
+}
 
-  .Login img {
-    width: 100%;
-    margin-bottom: 20px;
+@media screen and (max-width: 768px) {
+  .Login {
+    padding-left: 80px;
   }
 }
